2009-07-08  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-java.i: Added support for foreach loops using the
	Iterators.

2009-07-08  Chris Morley

	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj,
	OBMoreFormats.vcproj: add outformat, molproformat, vaspformat
	(still not gamessukformat because of need for regex)
	
	* windows-vc2005/babelconfig.h: update version to 2.2.2
	
2009-07-08  Chris Morley
	
	* src/formats/gaussformat.cpp: small change to parsing to prevent
	crash on some files.

2009-07-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/Makefile.am, data/Makefile.in: Only build data headers if
	Perl is present.

	* Change __CYGWIN__ ifdef to also include MINGW.

2009-07-06  Chris Morley

	* src/dlhandler_win32.cpp: omit call to GetModuleHandle and just 
	obtain exe path by calling GetModuleFileName with a zero handle.
	MSVC build works again but a better solution is needed. 

2009-07-05  Tim Vandermeersch

	Make sure there is only one PluginMap for each plugin type. (Fixes
	cygwin builds, all formats  are now shown when running babel
	-H). Also added some cygwin specific code to dlhandler_win32.cpp
	to find the plugin path (..\lib\openbabel\BABEL_VERSION).

2009-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.cpp (OBRingData): Fix bug in ring iterators,
	reported by Fredrik. PR#2815025.
	
	* test/iterators.cpp: Unit test for it.

2009-07-01  Noel O'Boyle  <baoilleach@gmail.com>

	* AUTHORS: Added my name

2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp: in reading <property> check that
	dictRef not found before reading title.
	Prevent crash if <symmetry> not read correctly.
	
	When writing <property> use dictRef rather than title if attr
	is namespaced.
	
	* src/math/vector3.cpp: sometimes needs #include <float.h>
	
2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	Make parsing of SMILES files stricter, following discussion on
	mailing list.